# OS_Labs

CMake_Lab2/main/: CMake_Lab2.h  main.cpp
Lab 2/main/: CMakeLists.txt  CMake_Lab2.h  main.cpp
Lab 2/tests/: CMakeLists.txt
Lab 3/OS_Lab3/: main.cpp  std_thread.cpp
Lab 4/receiver/: CMakeLists.txt  receiver.cpp
Lab 4/sender/: sender.h  sender_func.cpp
Lab 4/tests/: tests.cpp
Lab 5/: Lab 5.slnx
Lab 5/Client/: Client.hpp  ClientFunctions.cpp
Lab 5/Lab 5/: Entities.hpp  Server.hpp  ServerFunctions.cpp
Lab 5/Server/: Server.hpp  ServerFunctions.cpp  e  main.cpp
Lab 5/ServerTests/: ServerTests.cpp
OS_Lab3/: CMakeLists.txt
OS_Lab3/OS_Lab3/: CMakeLists.txt  main.cpp  std_thread.cpp  std_thread.h
OS_Lab3/std_tests/: CMakeLists.txt  test.cpp
OS_Lab4/: CMakeLists.txt  CMakeSettings.json
OS_Lab4/receiver/: CMakeLists.txt  receiver.cpp  receiver.h  receiver_func.cpp
OS_Lab4/sender/: CMakeLists.txt  sender.cpp  sender.h  sender_func.cpp
OS_Lab4/tests/: CMakeLists.txt  tests.cpp
